# tree-sitter-sql

./: CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  example-file  example-file.sql  go.mod  grammar.js  keywords.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: npm.yaml
bindings/c/: tree-sitter-sql.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sql/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterSQLTests/: TreeSitterSQLTests.swift
docs/: index.md
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  cte.txt  from.txt  from_tables.txt  limit_order_offset.txt  select.txt  statements.txt
