[package]
name = "tree-sitter-sql-cadac"
description = "Tree Sitter parser for the SQL language"
version = "0.1.4"
authors = ["Jan Hoon <janhoon97@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sql"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/janhoon/tree-sitter-sql"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.5"
